--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,7 @@ body {
     margin: 0 auto;
     background-color: white;
     box-shadow: -2px 6px 18px 3px rgba(0,0,0,0.75);
+    border-radius: 10px;
     padding: 50px;
 }
 
@@ -49,13 +50,23 @@ button {
     padding: 20px 30px;
     font-size: 20px;
     margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
+#addPlayer1{
+    background-color: var(--color-5);
+}
+#addPlayer2{
+    background-color: var(--color-5);
+    display: none;
+}
 
 #rollBtn {
     background-color: var(--color-5);
+    display: none;
 }
 
 #resetBtn {
@@ -72,4 +83,10 @@ button:focus {
 
 .active {
     box-shadow: -2px 6px 18px 3px rgba(0,0,0,0.75);
+}
+input{
+    font-size: 30px;
+    border: none;
+    margin-top: 10px;
+    text-align: center;
 }
