--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,7 +17,8 @@ body {
 }
 
 .container {
-    width: 400px;
+    max-width: 400px;
+    min-width: 300px;
     text-align: center;
     margin: 0 auto;
     background-color: white;
@@ -86,15 +87,15 @@ button:focus {
 }
 input{
     font-size: 30px;
-    border: none;
-    margin-top: 10px;
+    width: 300px;
+    margin: 10px auto;
     text-align: center;
 }
-@media screen and ( max-width: 600px){
-    .container{
-        width: 310px;
-    }
-    input{
-        width: 300px;
-    }
-}
+// @media screen and ( max-width: 600px){
+//     .container{
+//         width: 310px;
+//     }
+//     input{
+//         width: 300px;
+//     }
+// }
